// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput renders correctly 1`] = `
<CivicTextInput
  autoCapitalize="none"
  autoCorrect={false}
  clearButtonMode="while-editing"
  onBlur={undefined}
  onChangeText={[MockFunction]}
  onFocus={undefined}
  placeholder="Password"
  secureTextEntry={true}
  value="pa$$word"
/>
`;

exports[`PasswordInput renders passed placeholder text 1`] = `
<CivicTextInput
  autoCapitalize="none"
  autoCorrect={false}
  clearButtonMode="while-editing"
  onBlur={undefined}
  onChangeText={[MockFunction]}
  onFocus={undefined}
  placeholder="Re-enter password"
  secureTextEntry={true}
  value=""
/>
`;

exports[`PasswordInput renders placeholder text when there is no value 1`] = `
<CivicTextInput
  autoCapitalize="none"
  autoCorrect={false}
  clearButtonMode="while-editing"
  onBlur={undefined}
  onChangeText={[MockFunction]}
  onFocus={undefined}
  placeholder="Password"
  secureTextEntry={true}
  value=""
/>
`;
